--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@
 					<div class="nav-container">
 						<img id="logo" src="img/logo.png" alt="JobFinder">
 						<ul>
-							<li><a href="#">Encontrar vaga</a></li>
-							<li><a href="#">Enviar vaga</a></li>
-							<li><a href="#">Contato</a></li>
+							<li><a href="#">News & Events</a></li>
+							<li><a href="#">Multimedia</a></li>
+							<li><a href="#">NASA+</a></li>
 						</ul>
 					</div>
 				</nav>
 				<div id="main-banner">
 					<div id="search-form">
-						<h1>A maneira mais fácil de encontrar seu novo emprego</h1>
-						<p>Conecte-se de forma gratuita as melhores empresas e consiga o emprego dos seus sonhos.</p>
+						<h1>Hubble's New Pointing Mode</h1>
+						<p>Earth Information Center.</p>
 						<form>
 							<input type="text" name="job" placeholder="Digite o cargo">
 							<select name="region">
-								<option value="">Todos os estados</option>
+								<option value="">The Universe</option>
 							</select>
 							<select name="category">
 								<option value="">Categoria</option>
