novo site espacial

--- a/index.html
+++ b/index.html
@@ -17,23 +17,23 @@
 					<div class="nav-container">
 						<img id="logo" src="img/logo.png" alt="JobFinder">
 						<ul>
-							<li><a href="#">News & Events</a></li>
-							<li><a href="#">Multimedia</a></li>
-							<li><a href="#">NASA+</a></li>
+							<li><a href="#">Featured News</a></li>
+							<li><a href="#">Hubble's New Pointing Mode</a></li>
+							<li><a href="#">The Universe</a></li>
 						</ul>
 					</div>
 				</nav>
 				<div id="main-banner">
 					<div id="search-form">
-						<h1>Hubble's New Pointing Mode</h1>
-						<p>Earth Information Center.</p>
+						<h1>The Universe</h1>
+						<p>National Aeronautics and Space Administration.</p>
 						<form>
 							<input type="text" name="job" placeholder="Digite o cargo">
 							<select name="region">
-								<option value="">The Universe</option>
+								<option value="">More to Explore</option>
 							</select>
 							<select name="category">
-								<option value="">Categoria</option>
+								<option value="">News & Events</option>
 							</select>
 							<input type="submit" value="Pesquisar">
 						</form>
